--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-hello world
+hello world 
+Please remember, don't forget
+never leave the bathroom wet 
+don't leave the towels about the floor
+nor plan to stay an hour or more
